# RAG_Pipeline_Project

./: .env.agentsdk  .env.example  .env.template  .gitattributes  .gitignore  AGENTS.md  AGENT_ECOSYSTEM_VISION.md  CLAUDE.md  DEMO_PRESENTATION_CONTEXT.md  DOCUMENT_GENERATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL_AGENT_SDK.md  Makefile  QUICK_START_DOCUMENT_GENERATION.md  README.md  README_AGENT_SDK.md  README_TWO_STEP.md  batch_ingest_igxl_chm.py  clean_and_run.bat  debug_ingestion.py  demo_document_generation.py  diagnose.py  example_usage.py  igxl_ingestion_summary.txt  keep_alive.py  keep_awake_simple.py  keep_screen_on.bat  keep_screen_on.ps1  migrate_to_titan.py  pyproject.toml  requirements.txt  run_igxl_ingestion.bat  run_multiagent_pilot.py  test_agent_sdk.py  test_agent_sdk_tools.py  test_chm_extraction.py  test_components.py  test_comprehensive.py  test_folder_detection.py  test_import.py  (+6 more)
app/: __init__.py  streamlit_app.py
ate-code-agent/: README.md  agent.py  chipagent_mcp_config.linux.example.json  claude_code_mcp_config.example.json  main.py  rag_http_api.py  rag_mcp_server.py  requirements.txt  system_prompt.py  testprog_mcp_server.py
ate-code-agent/api/: __init__.py  main.py  models.py
ate-code-agent/safety/: __init__.py  (+1 more)
data/: sqlite_probe.db-journal
demo_output/: tml_debugging_guide.docx  tml_testing_report.docx
docs/: ARCHITECTURE.md
example_output/: ChipAgent_Sample_Report.docx
scripts/: run_app.ps1  tasks.ps1
tests/: test_config.py  test_document_generator.py  test_layout.py  test_modules.py
ultraflex-igxl skill/: SKILL.md
(+125 files in other folders)
