[project]
name = "page-indexing-rag"
version = "0.1.0"
description = "Streamlit RAG app with page-level indexing and hybrid internal/web retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.33.0",
  "python-dotenv>=1.0.1",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "pdfplumber>=0.11.0",
  "pypdf>=4.2.0",
  "duckduckgo-search>=6.1.0",
  # LangChain stack
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.1.0",
  "langchain-aws>=0.2.0",
  "langgraph>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

